[project]
name = "xarm_lite6_mjlab"
version = "0.0.0"
description = "xarm lite 6 in mjlab for RL"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# the nvidia index is checked in addition to PyPI, but only used for packages that PyPI doesn't have a suitable wheel for
# warp-lang wasn't installing properly on macOS
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[[tool.uv.index]]
url = "https://pypi.org/simple"
priority = "primary"

[tool.ruff]
indent-width = 2
src = ["xarm_lite6_mjlab"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
xarm_lite6_mjlab = "xarm_lite6_mjlab"